# social-media-agent

./: README.md  config.py  ingest.py  keyword_repsonder.py  knowledge_base.py  llm_client.py  mastodon_client.py  post_generator.py  pyproject.toml  rag_post.py  second_day_task.py  workshop4.py
workshop 2.2/: env.example  feedback_loop.py  gitignore.txt  post_generator.py  telegram_basics.py  telegram_get_chat_id.py
